
syntax = "proto3";

option go_package = "github.com/quocquann/locallibrary/book";

message BookResponse {
    string title = 1;
    string image = 2;
    string author = 3;
    string genre = 4;
}

message BookRequest {

}

service Book {
    rpc GetBook(BookRequest) returns (stream BookResponse){}
}

